Fix issue on small screens

--- a/screenflow/my.css
+++ b/screenflow/my.css
@@ -1,9 +1,10 @@
 *{box-sizing:border-box;}
 
-body,html{padding:0px;margin:0px;}
+body,html{padding:0px;margin:0px;height:100%;width:100%}
 
 body{
 	font-family: sans-serif;
+	background-color: #5E5E5E;
 }
 
 .navbar {
@@ -15,6 +16,8 @@ body{
 
 #container{
 	width: 100%;
+  background:white;
+  padding-bottom:40px;
 }
 #logo {
 	float: right;
@@ -74,7 +77,6 @@ body{
 	background-color: #5E5E5E;
 	height: 150px;
 	width:100%;
-  position:fixed;
   bottom:0px;
 	}
 
